<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListarPalabrasConfig">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="179dp"
        android:layout_height="63dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="34dp"
        android:text="Listar Palabras"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/buttonVolverPaginaConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/buttonVolverConfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="12dp"
        android:onClick="onClick"
        android:text="@string/buttonModificar"
        app:layout_constraintStart_toStartOf="@+id/listView"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <Button
        android:id="@+id/buttonBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="79dp"
        android:onClick="onClick"
        android:text="@string/buttonBorrar"
        app:layout_constraintEnd_toEndOf="@+id/listView"
        app:layout_constraintStart_toStartOf="@+id/buttonVolverPaginaConfig"
        app:layout_constraintTop_toBottomOf="@+id/listView" />
</androidx.constraintlayout.widget.ConstraintLayout>